--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,3 +1,12 @@
+#数据源配置
+spring.datasource.url=jdbc:mysql://localhost:3306/mytest?useUnicode=true&characterEncoding=utf8
+spring.datasource.username=root
+spring.datasource.password=
+spring.datasource.driver-class-name=com.mysql.jdbc.Driver
+
+# Mybatis 配置
+mybatis.mapper-locations=classpath:mapper/*.xml
+
 #修改tomcat的默认的端口号，将8080改为8888
 server.port=8888
 #页面默认前缀目录
@@ -6,6 +15,12 @@ spring.mvc.view.prefix=/WEB-INF/jsp/
 spring.mvc.view.suffix=.jsp
 #自定义属性，可以在Controller中读取
 application.hello=Hello Zhangsnke
+
+
+#设置静态资源的请求路径
+#spring.mvc.static-path-pattern=/**
+#指定静态资源的路径
+#spring.resources.static-locations=classpath:/static/,classpath:/public/
 
 #默认值为 /**
 #默认只可以定义一个
